--- a/doc/text.tex
+++ b/doc/text.tex
@@ -233,7 +233,7 @@ $Q(a, X^l, Y^{l \times l}) = {1 \over {l^2}}\sum_{i=1}^l\sum_{j=1}^l L(a(i, j), 
 \subsubsection{Задача построения эффективной торговой стратегии}
 \section{Теоретическое введение}
 \subsection{Алгоритм динамического искажения времени}
-Динамическое искажение времени (DTW) является широко известной техникой поиска оптимального соответствия между двумя временными последовательностями \autoref{fig:p1}. Грубо говоря, последовательности искажаются нелинейным образом для достижения максимального соответствия. Впервые DTW был применен для сравнения различных паттернов при распознавании голоса \cite{wjb87}.  В таких областях, как анализ данных и получение информации, DTW был успешно применен для автоматического распознавания искажений времени и различий в скоростях временных рядов.
+Динамическое искажение времени (DTW) является широко известной техникой поиска оптимального соответствия между двумя временными последовательностями \autoref{fig:p1}. Грубо говоря, последовательности искажаются нелинейным образом для достижения максимального соответствия. Впервые DTW был применен для сравнения различных паттернов при распознавании голоса \cite{wjb87}. Помимо анализа данных \cite{keogh2000scaling, yi1998efficient, berndt1994using}, DTW также был успешно применен в таких областях, как распознавание жестов \cite{gavrila1995towards}, робототехника \cite{schmill1999learned}, распознавание речи \cite{rabiner1993fundamentals}, производство \cite{gollmer1995detection} и медицина \cite{caiani1998warped}.
 
 В этой главе вводятся и обсуждаются основные идеи классического алгоритма DTW, а также приводятся его различные модификации, касающиеся как локального, так и глобального поведения алгоритма.
 
@@ -510,7 +510,7 @@ d_{i \> j-1} + w_v \cdot c(x_i, y_j),
 
 Более формально, назовем $R \subseteq [1,\dots,n] \times [1,\dots,m]$ глобальным ограничивающим регионом. Тогда искажающий путь относительно $R$ --- это искажающий путь, полностью лежащий внутри региона $R$. Оптимальный искажающий путь относительно $R$, обозначающийся $p_R^*$ --- это искажающий путь  относительно $R$, имеющий минимальную полную стоимость.
 
-Двумя самыми распространенными глобальными ограничивающими регионами являются полоса Сакоэ-Шиба и параллелограмм Итакура, представленные на рисунке \ref{fig:p7}. Здесь в качестве элементов искажающего пути могут быть выбраны только ячейки, закрашенные серым цветом.
+Двумя самыми распространенными глобальными ограничивающими регионами являются полоса Сакоэ-Шиба \cite{sakoe1978dynamic} и параллелограмм Итакура \cite{itakura1975minimum}, представленные на рисунке \ref{fig:p7}. Здесь в качестве элементов искажающего пути могут быть выбраны только ячейки, закрашенные серым цветом.
 
 \begin{figure}[h]
 \centering
@@ -523,10 +523,48 @@ d_{i \> j-1} + w_v \cdot c(x_i, y_j),
 
 Для глобального ограничивающего региона $R$, путь $p_R^*$ вычисляется практически таким же образом, как оптимальный искажающий путь в задаче без ограничений. Единственным отличием является то, что $c(x_i,y_j)$ полагается равным $\infty$ для всех пар $(i,j) \notin R$. Таким образом, требуется вычисление лишь тех ячеек матрицы кумулятивного расстояния, которые лежат в $R$. Это может значитально ускорить вычисление алгоритма DTW. Например, в случае полосы Сакоэ-Шиба фиксированной ширины $T$, потребуется лишь $O(T \cdot \max(n,m))$ времени вместо $O(nm)$ в классическом алгоритме DTW, что может привести к значительной экономии времени работы в случае $T \ll n,m.$
 
-Однако, использование глобальных ограничений может быть нежелательным в некоторых случаях, поскольку оптимальный искажающий путь может выходить за рамки выбранного региона, и, таким образом, не совпадать с $p_R^*$ (см. \ref{fig:p7}c). В некоторых случаях это может привести к нежелательным или полностью бесполезным результатам.
+Однако, использование глобальных ограничений может быть нежелательным в некоторых случаях, поскольку оптимальный искажающий путь может выходить за рамки выбранного региона, и, таким образом, не совпадать с $p_R^*$ (см. \ref{fig:p7}c). В некоторых случаях это может привести к нежелательным или полностью бесполезным результатам. Кроме того, существуют и другие способы увеличения скорости работы алгоритма DTW, см. \cite{m80}.
 
 \subsubsection{Алгоритм derivative dynamic time warping}
+
+Если на вход DTW подаются две последовательности, которые похожи друг на друга, за исключением локальных ускорений и замедлений по временной оси, алгоритм обычно показывает неплохие результаты. Однако, DTW не столь успешно справляется с ситуацией, когда две последовательности также отличаются по оси $y$. Глобальные отличия, затрагивающие последовательности целиком, такие, как разные значения средних (сдвиг), различные масштабы или линейные тренды, могут быть эффективно устранены \cite{kp98, aea95}.
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=15cm]{p8.png}
+\caption{При использовании DTW, две идентичных последовательности {\bf (a)}, очевидно, приводят к тривиальному соответствию {\bf (b)}. Однако, если в одной из последовательностей был немного изменен локальный признак (в данном случае --- глубина вогнутости {\bf (c)}), то DTW пытается объяснить расхождение в терминах искажения временной оси, что приводит к неожиданным результатам {\bf (d)}.}
+\label{fig:p8}
+\end{figure}
+
+Однако, два временных ряда могут быть искажены локально, например, вогнутость на одном из них может быть глубже, чем на другом. Например, на рисунке \ref{fig:p8} две идентичные последовательности имели тривиальное соответствие, однако небольшое углубление вогнутости привело к образованию двух сингулярностей.
+
+Проблема DTW заключается в признаках, которые он рассматривает. В рамках DTW для вычисления результата используются только значения объектов. Например, представим себе два элемента данных $x_i$ и $y_j$, которые имеют одинаковые значения, но $x_i$ является частью восходящего тренда, а $y_j$ --- нисходящего. С точки зрения DTW соответствие между этими двумя точками идеально (расстояние равно 0), хотя интуитивно мы предпочли бы не сопоставлять элемент восходящего тренда с элементом нисходящего. Именно эту проблему решает модификация алгоритма DTW, рассматривающаяся в этом разделе. Такой модифицированный алгоритм использует не только значения элементов последовательностей, но также и информацию о "форме" последовательности. Поскольку в качестве носителя информации о "форме" используются производные рассматриваемого временного ряда, алгоритм получил название Derivative Time Warping (DDTW).
+
+Как и в DTW, в DDTW строится матрица попарных расстояний между объектами последовательностей. Однако, вместо использования евклидовой метрики (или манхеттенского расстояния) в DDTW используется квадрат разности между оценками первых производных для $x_i$ и $y_j$. Несмотря на наличие сложных методов для оценки производных, особенно в случае наличия информации о модели рассматриваемых данных, в статье \cite{kp01} предлагается использовать следующую формулу:
+
+\begin{equation}
+	D_t[x]= {{(x_i-x_{i-1})+((x_{i+1}-x_{i-1})/2)} \over {2}}
+\end{equation}
+
+Эта оценка является простым средним наклона линии, проходящей через текущую точку и ее левого соседа, и линии, проходящей через левого и правого соседей рассматриваемой точки. Эмпирически, эта оценка более устойчива к выбросам, чем любая другая оценка, использующая только две точки. Заметим, что оценка не определена для первой и последней точек интервала, поэтому DDTW строит соответствие между частями рассматриваемых последовательностей со второго по предпоследний элемент. Для сильно зашумленных данных предлагается \cite{m91} использовать экспоненциальное сглаживание последовательностей данных перед вычислением производных.
+
+Временная сложность DDTW --- $O(nm)$, такая же, как у DTW.
+
 \subsection{Алгоритмы кластеризации}
+Типичная задача кластеризации состоит из следующих этапов \cite{jain1988algorithms}:
+\begin{itemize}
+\item Представление данных (например, отбор и выделение признаков);
+\item Определение меры близости, имеющей смысл в исследуемой предметной области;
+\item Собственно кластеризация;
+\item Абстракция данных;
+\item Оценка полученных результатов.
+\end{itemize}
+
+{\it Представление данных} включает в себя выбор количества классов, а также количества, типа и масштаба признаков, доступных алгоритму кластеризации. Не всегда у исследователя есть свобода выбора всей этой информации. {\it Отбор признаков} --- это процесс выбора "наилучшего" в некотором смысле подмножества из имеющихся признаков для использования при кластеризации. {\it Выделение признаков} --- это процесс создания новых признаков на основе уже существующих. Одна (или обе) из этих техник может быть применена для получения информативного набора признаков для использования при кластеризации.
+
+{\it Мера близости} обычно определяется как функция расстояния, определенная на множестве пар объектов. В различных задачах используется множество функций расстояния \cite{anderberg1973cluster, jain1988algorithms, diday1976clustering}. Простые меры расстояния, такие, как евклидово или манхеттенское расстояние, используются во многих задачах в качестве меры непохожести объектов, однако в некоторых случаях, если требуется подчеркнуть определенные свойства сравниваемых объектов, используются другие меры расстояния \cite{michalski1983automated, oates1999clustering}.
+
+Этап {\it группировки,} или, собственно, {\it кластеризации,} может производиться различными способами. Кластеризация может быть жесткой (каждому объекту ставится в соответствие идентификатор группы) или мягкая (для каждого объекта выдается вероятность его принадлежности каждой из групп). Иерархические алгоритмы кластеризации выдают систему вложенных разбиений множества всех объектов на кластеры, объединяя или разделяя объекты в зависимости от похожести кластеров.
 \subsubsection{Примеры задач кластеризации}
 \subsubsection{Эвристические графовые алгоритмы кластеризации}
 \subsubsection{Статистические алгоритмы кластеризации}
