--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,9 +1,187 @@
-@conference{wjb87,
-	author = "{Wilpon J G} and {Juang B H} and {Rabiner L R}",
-	title = "An investigation on the use of acoustic sub-word units for automatic speech recognition",
-    booktitle = "Acoustics, Speech, and Signal Processing, IEEE International Conference on ICASSP'87",
-    volume = "12",
-    pages = "821--824",
-    year = "1987",
-	organization = "IEEE"
+@inproceedings{wjb87,
+  title={An investigation on the use of acoustic sub-word units for automatic speech recognition},
+  author={Wilpon, JG and Juang, BH and Rabiner, LR},
+  booktitle={Acoustics, Speech, and Signal Processing, IEEE International Conference on ICASSP'87.},
+  volume={12},
+  pages={821--824},
+  year={1987},
+  organization={IEEE}
+}
+
+@inproceedings{kp98,
+  title={An Enhanced Representation of Time Series Which Allows Fast and Accurate Classification, Clustering and Relevance Feedback.},
+  author={Keogh, Eamonn J and Pazzani, Michael J},
+  booktitle={KDD},
+  volume={98},
+  pages={239--243},
+  year={1998}
+}
+
+@inproceedings{aea95,
+  title={Fast similarity search in the presence of noise, scaling, and translation in time-series databases},
+  author={Lin, Rake and Agrawal King-lp and Shim, Harpreet S Sawhney Kyuseok},
+  booktitle={Proceeding of the 21th International Conference on Very Large Data Bases},
+  pages={490--501},
+  year={1995},
+  organization={Citeseer}
+}
+
+@inproceedings{kp01,
+  title={Derivative Dynamic Time Warping.},
+  author={Keogh, Eamonn J and Pazzani, Michael J},
+  booktitle={Sdm},
+  volume={1},
+  pages={5--7},
+  year={2001},
+  organization={SIAM}
+}
+
+@book{m91,
+  title={Time series techniques for economists},
+  author={Mills, Terence C},
+  year={1991},
+  publisher={Cambridge University Press}
+}
+
+@article{m80,
+  title={Performance tradeoffs in dynamic time warping algorithms for isolated word recognition},
+  author={Myers, Cory and Rabiner, Lawrence R and Rosenberg, Aaron E},
+  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
+  volume={28},
+  number={6},
+  pages={623--635},
+  year={1980},
+  publisher={IEEE}
+}
+
+@article{sakoe1978dynamic,
+  title={Dynamic programming algorithm optimization for spoken word recognition},
+  author={Sakoe, Hiroaki and Chiba, Seibi},
+  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
+  volume={26},
+  number={1},
+  pages={43--49},
+  year={1978},
+  publisher={IEEE}
+}
+
+@article{itakura1975minimum,
+  title={Minimum prediction residual principle applied to speech recognition},
+  author={Itakura, Fumitada},
+  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
+  volume={23},
+  number={1},
+  pages={67--72},
+  year={1975},
+  publisher={IEEE}
+}
+
+@inproceedings{keogh2000scaling,
+  title={Scaling up dynamic time warping for datamining applications},
+  author={Keogh, Eamonn J and Pazzani, Michael J},
+  booktitle={Proceedings of the sixth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={285--289},
+  year={2000},
+  organization={ACM}
+}
+
+@inproceedings{yi1998efficient,
+  title={Efficient retrieval of similar time sequences under time warping},
+  author={Yi, Byoung-Kee and Jagadish, HV and Faloutsos, Christos},
+  booktitle={Data Engineering, 1998. Proceedings., 14th International Conference on},
+  pages={201--208},
+  year={1998},
+  organization={IEEE}
+}
+
+@inproceedings{berndt1994using,
+  title={Using Dynamic Time Warping to Find Patterns in Time Series.},
+  author={Berndt, Donald J and Clifford, James},
+  booktitle={KDD workshop},
+  volume={10},
+  number={16},
+  pages={359--370},
+  year={1994},
+  organization={Seattle, WA}
+}
+
+@inproceedings{schmill1999learned,
+  title={Learned models for continuous planning.},
+  author={Schmill, Matthew D and Oates, Tim and Cohen, Paul R},
+  booktitle={AISTATS},
+  year={1999}
+}
+
+@inproceedings{gavrila1995towards,
+  title={Towards 3-d model-based tracking and recognition of human movement: a multi-view approach},
+  author={Gavrila, DM and Davis, LS and others},
+  booktitle={International workshop on automatic face-and gesture-recognition},
+  pages={272--277},
+  year={1995},
+  organization={Citeseer}
+}
+
+@article{rabiner1993fundamentals,
+  title={Fundamentals of speech recognition},
+  author={Rabiner, Lawrence and Juang, Biing-Hwang},
+  year={1993},
+  publisher={Prentice hall}
+}
+
+@article{gollmer1995detection,
+  title={Detection of distorted pattern using dynamic time warping algorithm and application for supervision of bioprocesses},
+  author={Gollmer, Klaus and Posten, Clemens},
+  journal={On-line fault detection and supervision in chemical process industries},
+  year={1995}
+}
+
+@inproceedings{caiani1998warped,
+  title={Warped-average template technique to track on a cycle-by-cycle basis the cardiac filling phases on left ventricular volume},
+  author={Caiani, EG and Porta, A and Baselli, G and Turie, M and Muzzupappa, S and Pieruzzi, F and Crema, C and Malliani, A and Cerutti, S},
+  booktitle={Computers in Cardiology 1998},
+  pages={73--76},
+  year={1998},
+  organization={IEEE}
+}
+
+@book{jain1988algorithms,
+  title={Algorithms for clustering data},
+  author={Jain, Anil K and Dubes, Richard C},
+  year={1988},
+  publisher={Prentice-Hall, Inc.}
+}
+
+@article{anderberg1973cluster,
+  title={Cluster analysis for applications},
+  author={Anderberg, Michael R},
+  journal={Academic, New York},
+  year={1973}
+}
+
+@incollection{diday1976clustering,
+  title={Clustering analysis},
+  author={Diday, Edwin and Simon, JC},
+  booktitle={Digital pattern recognition},
+  pages={47--94},
+  year={1976},
+  publisher={Springer}
+}
+
+@article{michalski1983automated,
+  title={Automated construction of classifications: Conceptual clustering versus numerical taxonomy},
+  author={Michalski, Ryszard S and Stepp, Robert E},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  number={4},
+  pages={396--410},
+  year={1983},
+  publisher={IEEE}
+}
+
+@inproceedings{oates1999clustering,
+  title={Clustering time series with hidden markov models and dynamic time warping},
+  author={Oates, Tim and Firoiu, Laura and Cohen, Paul R},
+  booktitle={Proceedings of the IJCAI-99 workshop on neural, symbolic and reinforcement learning methods for sequence learning},
+  pages={17--21},
+  year={1999},
+  organization={Citeseer}
 }
